load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "error.go",
    ],
    importpath = "github.com/nilebox/broker-server/pkg/controller",
    visibility = ["//visibility:public"],
    deps = ["//pkg/api:go_default_library"],
)
