load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "util.go",
    ],
    importpath = "github.com/nilebox/broker-server/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/urfave/negroni:go_default_library",
    ],
)
