load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "storage.go",
        "types.go",
    ],
    importpath = "github.com/nilebox/broker-server/pkg/stateful/storage",
    visibility = ["//visibility:public"],
    deps = ["//pkg/api:go_default_library"],
)
