load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "broker.go",
        "submitter.go",
        "submitter_storage.go",
        "task.go",
        "task_create.go",
        "task_delete.go",
        "task_update.go",
        "tasks.go",
    ],
    importpath = "github.com/nilebox/broker-server/pkg/stateful/task",
    visibility = ["//visibility:public"],
    deps = ["//pkg/stateful/storage:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["submitter_storage_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/stateful/storage:go_default_library"],
)
